<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informacion">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="142dp"
        android:contentDescription="@string/FONDO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menestrasdelnegro_informacion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="205dp"
        android:layout_height="68dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="cursive"
        android:text="@string/menestras_del_negro"
        android:textAlignment="center"
        android:textColor="#F0C53B2E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="186dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/restaurante"
        android:textAlignment="center"
        android:textColor="#F0C53B2E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="109dp"
        android:layout_height="0dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/mapa"
        android:textAlignment="center"
        android:textColor="#F0C53B2E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="300dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/horario"
        android:textAlignment="center"
        android:textColor="#F0C53B2E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="268dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/como_llegar1"
        android:textAlignment="center"
        android:textColor="#F0C53B2E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="91dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:background="#854CAF50"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/guayaquil"
        android:textAlignment="center"
        android:textColor="#1A1B1A"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="91dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="252dp"
        android:background="#854CAF50"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/quito"
        android:textAlignment="center"
        android:textColor="#1A1B1A"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="160dp"
        android:layout_height="71dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="404dp"
        android:background="#6BF44336"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/centro_comercial_r_o_centro_norte_av_francisco_de_orellana"
        android:textAlignment="gravity"
        android:textColor="#2D302D"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="156dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="280dp"
        android:background="#6BF44336"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/centro_comercial_el_recreo_patio_de_comidas_planta_baja"
        android:textAlignment="gravity"
        android:textColor="#2D302D"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="186dp"
        android:layout_height="56dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/informaci_n"
        android:textAlignment="center"
        android:textColor="#F0C53B2E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/mapa" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

</androidx.constraintlayout.widget.ConstraintLayout>